--- a/LLM/01-groq_python.ipynb
+++ b/LLM/01-groq_python.ipynb
@@ -3,20 +3,74 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mRunning cells with '.venv (Python 3.12.1)' requires the ipykernel package.\n",
+      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
+      "\u001b[1;31mCommand: 'c:/Python/LLM/.venv/Scripts/python.exe -m pip install ipykernel -U --force-reinstall'"
+     ]
     }
-   },
+   ],
+   "source": [
+    "#78 Usando os serviços de AI do GROQ no Python\n",
+    "from dotenv import load_dotenv, find_dotenv\n",
+    "load_dotenv(find_dotenv())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "#78 Usando os serviços de AI do GROQ no Python"
+    "from groq import Groq\n",
+    "client = Groq()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mensagens = [\n",
+    "    {\n",
+    "        \"role\": \"user\",\n",
+    "        \"content\": \"Explique a diferença entre llm e langchain. Responda em português\"\n",
+    "    }\n",
+    "]\n",
+    "\n",
+    "response = client.chat.completions.create(\n",
+    "    messages=mensagens,\n",
+    "    model=\"llama3-8b-8192\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#exibir o resultado. Parei no minuto 5\n",
+    "response"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": ".venv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
