Atualizacao com comentarios

--- a/LLM/01-groq_python.ipynb
+++ b/LLM/01-groq_python.ipynb
@@ -18,6 +18,14 @@
    ],
    "source": [
     "#78 Usando os serviços de AI do GROQ no Python\n",
+    "\"\"\"Chamada ao modelo com stream=True\n",
+    "Ao usar stream=True, você está dizendo ao modelo para enviar a resposta em partes, conforme ela é gerada, em vez de esperar a resposta completa.\n",
+    "Isso é útil para:\n",
+    "    Melhorar a experiência do usuário (resposta começa a aparecer imediatamente)\n",
+    "    Reduzir latência percebida\n",
+    "    Exibir respostas longas de forma progressiva\n",
+    "    flush=True força a impressão imediata no terminal\"\"\"\n",
+    "\n",
     "from dotenv import load_dotenv, find_dotenv\n",
     "load_dotenv(find_dotenv())"
    ]
@@ -45,9 +53,10 @@
     "    }\n",
     "]\n",
     "\n",
-    "response = client.chat.completions.create(\n",
+    "stream = client.chat.completions.create(\n",
     "    messages=mensagens,\n",
-    "    model=\"llama3-8b-8192\"\n",
+    "    model=\"llama3-8b-8192\",\n",
+    "    stream=True\n",
     ")"
    ]
   },
@@ -58,7 +67,8 @@
    "outputs": [],
    "source": [
     "#exibir o resultado. Parei no minuto 5\n",
-    "response"
+    "for chunck in stream:\n",
+    "    print(chunck.choices[0].delta.content, end=\"\", flush=true)"
    ]
   }
  ],
